--- a/Pre-Processing & Modeling.ipynb
+++ b/Pre-Processing & Modeling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Capstone 3: Data Wrangling - Snowflake Cloud Datawarehouse vs. On-Prem MSSQL Comparison"
+    "### Capstone 3: Snowflake Cloud Data warehouse vs. On-Prem MSSQL Comparison"
    ]
   },
   {
